# research_paper_analyzer

./: .env.example  README.md  pyproject.toml
output/: 2603.08785_example.md
research_paper_analyser/: main.py
research_paper_analyser/agents/: __init__.py  graph.py
research_paper_analyser/api/: __init__.py  ping.py
research_paper_analyser/api/routers/: __init__.py
research_paper_analyser/api/routers/analyze/: __init__.py  analyze.py
research_paper_analyser/config/: __init__.py  llm_provider_config.py
research_paper_analyser/core/: arxiv.py  chunker.py  fetcher.py  grobid.py  llm.py  retrieval.py  tei_parser.py
research_paper_analyser/schemas/: __init__.py  analysis.py  requests.py
research_paper_analyser/services/: pipeline.py  report.py
research_paper_analyser/utils/: __init__.py  logger.py  templates.py
