[project]
name = "research-paper-analyser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all]>=0.135.1",
    "httpx>=0.27.0",
    "langchain>=0.2.0",
    "langchain-google-genai>=1.0.0",
    "langgraph>=0.2.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]
